@@ -26,7 +26,7 @@ Gem::Specification.new do |s|
   s.add_runtime_dependency('classifier', "~> 1.3")
   s.add_runtime_dependency('directory_watcher', "~> 1.1")
   s.add_runtime_dependency('maruku', "~> 0.5")
-  s.add_runtime_dependency('kramdown', "~> 0.13")
+  s.add_runtime_dependency('kramdown', "~> 0.13.4")
   s.add_runtime_dependency('albino', "~> 1.3")
 
   s.add_development_dependency('rake', "~> 0.9")
