@@ -97,6 +97,7 @@ module Jekyll
               :footnote_nr   => @config['kramdown']['footnote_nr'],
               :entity_output => @config['kramdown']['entity_output'],
               :toc_levels    => @config['kramdown']['toc_levels'],
+              :smart_quotes  => @config['kramdown']['smart_quotes'],
 
               :coderay_wrap               => @config['kramdown']['coderay']['coderay_wrap'],
               :coderay_line_numbers       => @config['kramdown']['coderay']['coderay_line_numbers'],
@@ -111,7 +112,8 @@ module Jekyll
               :auto_ids      => @config['kramdown']['auto_ids'],
               :footnote_nr   => @config['kramdown']['footnote_nr'],
               :entity_output => @config['kramdown']['entity_output'],
-              :toc_levels    => @config['kramdown']['toc_levels']
+              :toc_levels    => @config['kramdown']['toc_levels'],
+              :smart_quotes  => @config['kramdown']['smart_quotes']
             }).to_html
           end
         when 'rdiscount'
