@@ -10,6 +10,7 @@
     * URL escape category names in URL generation (#360)
     * Fix error with limit_posts (#442)
     * Properly select dotfile during directory scan (#363, #431, #377)
+    * Allow setting of Kramdown smart_quotes (#482)
 
 == 0.11.2 / 2011-12-27
   * Bug Fixes
